--- a/PuzzleTokens.sketchplugin/Contents/Sketch/manifest.json
+++ b/PuzzleTokens.sketchplugin/Contents/Sketch/manifest.json
@@ -7,7 +7,7 @@
   "appcast": "https://raw.githubusercontent.com/ingrammicro/puzzle-tokens/master/appcast.xml",
   "compatibleVersion": 3,
   "bundleVersion": 1,
-  "version" : "4.1.2",
+  "version" : "5.0.0",
   "icon": "icon.png",
   "commands" : [   
     {
@@ -26,9 +26,7 @@
   "menu": {
     "title": "📦 Puzzle Tokens",
     "items": [
-      "cmApplyLess",
-      "-",
-      "cmdGeneratePreview"
+      "cmApplyLess"      
     ]
   }
 }
