--- a/PuzzleTokens.sketchplugin/Contents/Sketch/manifest.json
+++ b/PuzzleTokens.sketchplugin/Contents/Sketch/manifest.json
@@ -43,6 +43,8 @@
             "cmApplyLess",
             "cmQuickApply",
             "-",
+            "cmdGeneratePreview",
+            "-",
             "cmConfig"
         ]
     }
