--- a/PuzzleTokens.sketchplugin/Contents/Sketch/manifest.json
+++ b/PuzzleTokens.sketchplugin/Contents/Sketch/manifest.json
@@ -7,7 +7,7 @@
     "appcast": "https://raw.githubusercontent.com/ingrammicro/puzzle-tokens/master/appcast.xml",
     "compatibleVersion": 3,
     "bundleVersion": 1,
-    "version": "7.0.0",
+    "version": "8.0.0.devel-export.00",
     "icon": "icon.png",
     "commands": [
         {
@@ -37,6 +37,12 @@
             "identifier": "cmdGeneratePreview"
         },
         {
+            "script": "cmd-export.js",
+            "handler": "onRun",
+            "name": "Export Styles & Symbols",
+            "identifier": "cmdExport"
+        },
+        {
             "script": "cmd-config.js",
             "handler": "onRun",
             "name": "Configure",
@@ -57,6 +63,7 @@
             "cmQuickApply",
             "-",
             "cmdGeneratePreview",
+            "cmdExport",
             "-",
             "cmConfig",
             "-",
