--- a/PuzzleTokens.sketchplugin/Contents/Sketch/manifest.json
+++ b/PuzzleTokens.sketchplugin/Contents/Sketch/manifest.json
@@ -7,7 +7,7 @@
     "appcast": "https://raw.githubusercontent.com/ingrammicro/puzzle-tokens/master/appcast.xml",
     "compatibleVersion": 3,
     "bundleVersion": 1,
-    "version": "8.1.2-dev",
+    "version": "8.1.1",
     "icon": "icon.png",
     "commands": [
         {
