--- a/PuzzleTokens.sketchplugin/Contents/Sketch/manifest.json
+++ b/PuzzleTokens.sketchplugin/Contents/Sketch/manifest.json
@@ -7,10 +7,9 @@
     "appcast": "https://raw.githubusercontent.com/ingrammicro/puzzle-tokens/master/appcast.xml",
     "compatibleVersion": 3,
     "bundleVersion": 1,
-    "version": "8.17.5",
+    "version": "8.18.0",
     "icon": "icon.png",
-    "commands": [
-        {
+    "commands": [{
             "script": "cmd-actions.js",
             "name": "My Action Listener",
             "handlers": {
